Merge branch 'master' into ud-gapping